test/types/unions/accessByIndex-bad4.good
accessByIndex-bad4.chpl:8: error: union access by non-compile-time index is not supported
