test/types/unions/accessByIndex-bad4.chpl
union U {
  var x: int;
  var y: string;
}

var u: U;
const idx = 0;
u(idx) = 10;
